update html and css

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 
-  <title>Destinations The USA</title>
+  <title>Destinations USA</title>
 </head>
 
 <body>
   <main>
+    <header>
+      <h1 class="intro">Type a letter to find a matching state or city along with its population in the USA.</h1>
+    </header>
     <!-- Form -->
     <form class="search-form">
       <input type="text" class="search" placeholder="City or State">
