update html and css

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
   <main>
-    <header>
-      <h1 class="intro">Type a letter to find a matching state or city along with its population in the USA.</h1>
-    </header>
+    <nav class="nav-bar">
+      <h1>Type a letter to find a matching state or city along with its population in the USA.</h1>
+    </nav>
     <!-- Form -->
     <form class="search-form">
       <input type="text" class="search" placeholder="City or State">
