--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <main>
     <nav class="nav-bar">
-      <h1>Type a letter to find a matching state or city along with its population in the USA!</h1>
+      <h1>Type a letter to find a matching state or city along with its population in the USA!!</h1>
     </nav>
     <!-- Form -->
     <form class="search-form">
